# dreamteam-for-development

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  install.bat  install.sh  pyproject.toml  requirements.txt
claude-code/: dreamteam.md
examples/: mcp-claude-code.json  mcp-claude-desktop.json
examples/personas/: backend_lead.md  security_lead.md
src/: __init__.py  data_loader.py  server.py  vector_store.py
